kube-compose.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hasher-po
  labels:
    app: hasher-po
spec:
  containers:
    - name: hasher-container
      args:
        - hasher.rb
      command:
        - ruby
      image: docker.io/academiaonline/dockercoins:latest-hasher
      securityContext:
        runAsGroup: 65534
        runAsUser: 65534
      volumeMounts:
        - name: hasher-volume
          mountPath: /src/hasher.rb
          readOnly: true
          subPath: hasher.rb
      workingDir: /src/
  volumes:
    - name: hasher-volume
      configMap:
        defaultMode: 0444
        items:
          - key: hasher.rb
            mode: 0444
            path: hasher.rb
        name: hasher-cm
---
apiVersion: v1
kind: Pod
metadata:
  name: redis-po
  labels:
    app: redis-po
spec:
  containers:
    - name: redis-container
      args:
        - redis-server
      command:
        - docker-entrypoint.sh
      image: docker.io/library/redis:alpine
      securityContext:
        runAsGroup: 0
        runAsUser: 65534
      volumeMounts:
        - name: redis-volume
          mountPath: /data/
          readOnly: false
      workingDir: /data/
  volumes:
    - name: redis-volume
      persistentVolumeClaim:
        claimName: redis-pvc
        readOnly: false
---
apiVersion: v1
kind: Pod
metadata:
  name: rng-po
  labels:
    app: rng-po
spec:
  containers:
    - name: rng-container
      args:
        - rng.py
      command:
        - python
      image: docker.io/academiaonline/dockercoins:latest-rng
      securityContext:
        runAsGroup: 65534
        runAsUser: 65534
      volumeMounts:
        - name: rng-volume
          mountPath: /src/rng.py
          readOnly: true
          subPath: rng.py
      workingDir: /src/
  volumes:
    - name: rng-volume
      configMap:
        defaultMode: 0444
        items:
          - key: rng.py
            mode: 0444
            path: rng.py
        name: rng-cm
---
apiVersion: v1
kind: Pod
metadata:
  name: webui-po
  labels:
    app: webui-po
spec:
  containers:
    - name: webui-container
      args:
        - webui.js
      command:
        - node
      image: docker.io/academiaonline/dockercoins:latest-webui
      securityContext:
        runAsGroup: 65534
        runAsUser: 65534
      volumeMounts:
        - name: webui-files
          mountPath: /src/files/
          readOnly: true
        - name: webui-volume
          mountPath: /src/webui.js
          readOnly: true
          subPath: webui.js
      workingDir: /src/
  volumes:
    - name: webui-volume
      configMap:
        defaultMode: 0444
        items:
          - key: webui.js
            mode: 0444
            path: webui.js
        name: webui-cm
    - name: webui-files
      emptyDir:
        medium: Memory
        sizeLimit: 1Mi
---
apiVersion: v1
kind: Pod
metadata:
  name: worker-po
  labels:
    app: worker-po
spec:
  containers:
    - name: worker-container
      args:
        - worker.py
      command:
        - python
      image: docker.io/academiaonline/dockercoins:latest-worker
      securityContext:
        runAsGroup: 65534
        runAsUser: 65534
      volumeMounts:
        - name: worker-volume
          mountPath: /src/worker.py
          readOnly: true
          subPath: worker.py
      workingDir: /src/
  volumes:
    - name: worker-volume
      configMap:
        defaultMode: 0444
        items:
          - key: worker.py
            mode: 0444
            path: worker.py
        name: worker-cm
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hasher-netpol
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: worker-po
      ports:
        - port: 8080
  podSelector:
    matchLabels:
      app: hasher-po
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-netpol
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: webui-po
        - podSelector:
            matchLabels:
              app: worker-po
      ports:
        - port: 6379
  podSelector:
    matchLabels:
      app: redis-po
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rng-netpol
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: worker-po
      ports:
        - port: 8080
  podSelector:
    matchLabels:
      app: rng-po
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webui-netpol
spec:
  ingress:
    - ports:
        - port: 8080
  podSelector:
    matchLabels:
      app: webui-po
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-po
spec:
  podSelector:
    matchLabels:
      app: worker-po
  policyTypes:
    - Ingress
---
apiVersion: v1
kind: Service
metadata:
  name: hasher
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: hasher-po
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis-po
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: rng
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: rng-po
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: webui
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: webui-po
  type: NodePort
